# Travel_Purpose-City_Tags

./: .gitignore  CHANGELOG.md  CITATION.cff  CITY_TAGS_STATS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATASET_CARD.md  LICENSE  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  PUBLISHING.md  README.md  ROADMAP_v2.0.md  SOCIAL_MEDIA_POSTS.md  pyproject.toml  setup.py  test_imports.py
.github/workflows/: ci.yml  ci.yml.disabled  publish.yml  release.yml
data/: additional_cities.csv  city_tags_seed.csv
examples/: 01_quickstart.ipynb  02_advanced_usage.ipynb  README.md
scripts/: build_city_tags.py  build_release.py  pipeline.py  scrape_additional_cities.py
tests/: __init__.py  test_api.py  test_normalize.py  test_scoring.py
travelpurpose/: __init__.py  classifier.py  cli.py  explainability.py  fingerprint.py  simple_tags.py  tags.py  temporal.py
travelpurpose/data/: .gitkeep  cities.json  cities_enhanced.json  city_tags.csv  wikidata_cities_cache.json
travelpurpose/ontology/: mapping_nbd.yaml  ontology.yaml
travelpurpose/synthetic/: __init__.py  engine.py
travelpurpose/utils/: __init__.py  agoda.py  booking.py  geonames.py  harvest.py  io.py  kayak.py  normalize.py  opentripmap.py  restcountries.py  scoring.py  skyscanner.py  tripdotcom.py  trivago.py  wikidata.py
